--- a/ServerModulesArrayApi.cfg
+++ b/ServerModulesArrayApi.cfg
@@ -1,38 +1,23 @@
 # Comment out modules using a `#` to exclude
 # a module from a build
 
-ArgSortMsg
-ArraySetopsMsg
-BroadcastMsg
-CastMsg
-ConcatenateMsg
-CSVMsg
-DataFrameIndexingMsg
+# ArrayApiSpecial
+# ArgSortMsg
+# CastMsg
 EfuncMsg
-EncodingMsg
-FlattenMsg
-HashMsg
-HDF5Msg
-HistogramMsg
-In1dMsg
 IndexingMsg
-JoinEqWithDTMsg
-KExtremeMsg
-# LinalgMsg
-LogMsg
+# # LinalgMsg
+# LogMsg
 ManipulationMsg
 OperatorMsg
-ParquetMsg
 RandMsg
 ReductionMsg
-RegistrationMsg
-SegmentedMsg
-SequenceMsg
-SortMsg
-StatsMsg
-TimeClassMsg
-TransferMsg
-UniqueMsg
+# RegistrationMsg
+# SequenceMsg
+# SortMsg
+# StatsMsg
+# TransferMsg
+# UniqueMsg
 
 # Add additional modules located outside
 # of the Arkouda src/ directory below.
