remove testing comments
Signed-off-by: Jeremiah Corrado <jeremiah.corrado@hpe.com>

--- a/ServerModulesArrayApi.cfg
+++ b/ServerModulesArrayApi.cfg
@@ -1,23 +1,23 @@
 # Comment out modules using a `#` to exclude
 # a module from a build
 
-# ArrayApiSpecial
-# ArgSortMsg
-# CastMsg
-# EfuncMsg
-# IndexingMsg
-# # LinalgMsg
-# LogMsg
+ArrayApiSpecial
+ArgSortMsg
+CastMsg
+EfuncMsg
+IndexingMsg
+# LinalgMsg
+LogMsg
 ManipulationMsg
-# OperatorMsg
+OperatorMsg
 RandMsg
-# ReductionMsg
-# RegistrationMsg
-# SequenceMsg
-# SortMsg
-# StatsMsg
-# TransferMsg
-# UniqueMsg
+ReductionMsg
+RegistrationMsg
+SequenceMsg
+SortMsg
+StatsMsg
+TransferMsg
+UniqueMsg
 
 # Add additional modules located outside
 # of the Arkouda src/ directory below.
