--- a/ServerModulesArrayApi.cfg
+++ b/ServerModulesArrayApi.cfg
@@ -1,7 +1,7 @@
 # Comment out modules using a `#` to exclude
 # a module from a build
 
-ArrayApiSpecial
+# ArrayApiSpecial
 ArgSortMsg
 CastMsg
 EfuncMsg
