adjustments for testing
Signed-off-by: Jeremiah Corrado <jeremiah.corrado@hpe.com>

--- a/ServerModules.cfg
+++ b/ServerModules.cfg
@@ -31,6 +31,8 @@ StatsMsg
 TimeClassMsg
 TransferMsg
 UniqueMsg
+ManipulationMsg
+SetMsg
 
 # Add additional modules located outside
 # of the Arkouda src/ directory below.
